# openarm_isaac_lab_trainer

./: .gitignore  .openxr_runtime.json  play_bimanual_reach.sh  play_lift.sh  play_reach.sh  pyproject.toml  teleop_bimanual.sh  train_bimanual_reach.sh  train_drawer.sh  train_lift.sh
scripts/: create_synthetic_data.sh  openpi_client.sh  play_bimanual_lift.sh  play_bimanual_reach.sh  play_drawer.sh  play_lift.sh  play_reach.sh  start_container.sh  stop_container.sh  teleop_bimanual.sh  teleop_unimanual.sh  teleop_xr.sh  train_bimanual_lift.sh  train_bimanual_reach.sh  train_drawer.sh  train_lift.sh  train_reach.sh
scripts/reinforcement_learning/rsl_rl/: play.py  play_bimanual_training_data.py  train.py
scripts/teleoperation/: __init__.py  create_synthetic_data_bimanual.py  openpi_client_bimanual.py  teleop_bimanual.py  teleop_unimanual.py
scripts_docker/: create_synthetic_data.sh  play_bimanual_lift.sh  play_drawer.sh  start_container.sh  stop_container.sh  teleop_unimanual.sh  teleop_xr.sh  train_bimanual_lift.sh  train_reach.sh
source/openarm/openarm/tasks/manager_based/openarm_manipulation/assets/: openarm_bimanual.py
source/openarm/openarm/tasks/manager_based/openarm_manipulation/bimanual/lift/: __init__.py  lift_env_cfg.py
source/openarm/openarm/tasks/manager_based/openarm_manipulation/usds/mugs/: 1.usd  2.usd  3.usd  4.usd
source/openarm/openarm/tasks/manager_based/openarm_manipulation/usds/openarm_bimanual/: openarm_bimanual.usd  openarm_bimanual_factory.usd  openarm_bimanual_factory_orig.usd  openarm_bimanual_test.usd
(+9 files in other folders)
