[project]
name = "openarm-isaac-lab-trainer"
version = "0.1.0"
description = "OpenArm Isaac Lab training environment and tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorboard>=2.15.0",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
]

[tool.uv]
# Don't try to build/install this project, just manage dependencies
package = false
